Fix some more spacing issues

--- a/working/index.css
+++ b/working/index.css
@@ -45,7 +45,7 @@ h2 {
 }
 
 .container {
-    padding: 1.5em;
+    padding: 0 1.5em;
 }
 
 .top-decorative-pattern {
@@ -128,6 +128,10 @@ h2 {
 @media screen and (min-width: 768px) {
     body {
         background-image: url("./assets/bg-main-tablet.png");
+    }
+
+    .container {
+        padding: 0;
     }
 
     .logo-area {
